fixed some css issues, nav, font, alignment for container

--- a/02week/blog/css/style.css
+++ b/02week/blog/css/style.css
@@ -1,5 +1,12 @@
 header {
-    background-image: linear-gradient(to bottom right, blue,white); 
+    background-image: linear-gradient(to bottom right, #00B9FF,aqua); 
+}
+
+h1 {
+    color: white;
+    font-family: futura;
+    margin: auto;
+    padding: 1%;  
 }
 
 nav {
@@ -9,11 +16,13 @@ nav {
 
 a {
     padding: 1%;
-    border: solid;
+    font-family: futura;
+    text-transform: uppercase;
+    color: white;
 }
 
 body {
-    background-image: linear-gradient(to bottom right, white,black);
+    background-color: white;
 }
 
 #container {
@@ -21,6 +30,10 @@ body {
     border: solid;
     border-width: 1px;
     border-color: black;
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+
 }
 
 article {
